# panelgen1

./: README.md  my_panel_addon.py  panel_spec.toml  pyproject.toml
scripts/addons/: my_panel_addon.py
src/panelgen1/: __init__.py  cli.py  cli1.py  generate_addon.py
src/panelgen1/templates/: addon_single.jinja2  panel_spec.toml
